--- a/kubernetes/manifests/secrets.yaml
+++ b/kubernetes/manifests/secrets.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: secrets
+  namespace: techfood-pedidos
 type: Opaque
 data:
   POSTGRES_DB: dGVjaGZvb2Q= # base64 encoded value of 'techfood'
