--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,7 +11,7 @@ on:
 
 env:
   AWS_REGION: us-east-1
-  ECR_REPOSITORY: kotlin-appgit ch
+  ECR_REPOSITORY: kotlin-app
   CLUSTER_NAME: techfood-eks
 
 jobs:
